# agente-insights

./: .gitignore  MELHORIAS.md  README.md  insights.py  mapear_estrutura_org_corrigido.py  pyproject.toml  requirements.txt  setup.py  setup_env.py  verificar_dados.py
agenteinsights/: .env.example  .gitignore  Insights.py  __init__.py  analise_insights.py  analise_insightsv1.py  analise_insightsv2 funcional ultrapassa tokens.py  analise_ml.py  config.py  cruzamento_dados.py  gerar_relatorio.py  interacao_ia.py  leitura_e_verificacao.py  requirements.txt  setup_env.py  test_insights.py
agenteinsights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agenteinsights/backups/: analise_insights.py.20250606_095452.bak
agenteinsights/bak/: Insightsv2.py  gerar_relatoriov1.py  insightsv1.py  interacao_iav2.py
backups/: chat_ia_loop_corrigido.py.20250606_093434.bak  gerar_resposta_contextualizada_corrigido.py.20250606_093434.bak  insights.py.20250606_093457.bak  mapear_estrutura_org_corrigido.py.20250606_093434.bak
bak/correcoes/: COMO_APLICAR_CORRECOES.txt  aplicar_correcoes.py  fix_allocation.py  fix_imports.py
bak/estrutura/: estrutura_agente_insights.txt  tree.txt
bak/testes/: micro_teste_vendas.py  mini_teste_especifico.py  teste_basico_tribos.py  teste_beneficios.py  teste_final.py  teste_final_tribos.py  teste_importacao.py  teste_integracao.py  teste_maturidade_tribos.py  teste_percentuais.py  teste_sistema_completo.py  teste_todas_tribos.py  teste_tribo_beneficios.py  teste_tribo_beneficios_fix.py  teste_tribo_vendas.py  teste_vendas_direto.py  (+1 more)
(+6 files in other folders)
